--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=Presence
+spring.datasource.url=jdbc:postgresql://localhost:5432/presence
+spring.datasource.username=postgres
+spring.datasource.password=rafalimanana3$
+spring.datasource.driver-class-name=org.postgresql.Driver
