--- a/src/main/resources/openapi/PresenceApiSpec.yaml
+++ b/src/main/resources/openapi/PresenceApiSpec.yaml
@@ -4,9 +4,9 @@ info:
   description: API for managing student presences.
   version: 1.0.0
 servers:
-  - url: http://localhost:8080/api/presences
+  - url: http://localhost:8080/api
 paths:
-  /:
+  /presences:
     post:
       summary: Add a new presence
       requestBody:
@@ -41,7 +41,7 @@ paths:
                   $ref: '#/components/schemas/Presence'
         '500':
           description: Internal server error
-  /{id}:
+  /presences/{id}:
     get:
       summary: Get presence by ID
       parameters:
