--- a/src/main/resources/openapi/AbsenceApiSpec.yaml
+++ b/src/main/resources/openapi/AbsenceApiSpec.yaml
@@ -1,12 +1,97 @@
-openapi: "3.0.2"
+openapi: 3.0.0
 info:
-  title: API Title
-  version: "1.0"
+  title: Absence Notification API
+  version: 1.0.0
+  description: API pour gérer les notifications d'absence des étudiants
 servers:
-  - url: https://api.server.test/v1
+  - url: http://localhost:8080/api
 paths:
-  /test:
+  /absences/{studentId}:
     get:
+      summary: Obtenir les comptes d'absences par cours pour un étudiant
+      parameters:
+        - name: studentId
+          in: path
+          required: true
+          description: L'ID de l'étudiant
+          schema:
+            type: string
       responses:
         '200':
-          description: OK
+          description: Liste des absences par cours
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AbsenceCountByCourse'
+        '500':
+          description: Erreur interne du serveur
+
+  /absences/notify/{studentId}:
+    get:
+      summary: Notifier un étudiant en fonction de ses absences
+      parameters:
+        - name: studentId
+          in: path
+          required: true
+          description: L'ID de l'étudiant
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Message de notification
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: ID d'étudiant invalide
+        '500':
+          description: Erreur interne du serveur
+
+  /absences/{studentId}/period:
+    get:
+      summary: Obtenir le nombre d'absences sur une période
+      parameters:
+        - name: studentId
+          in: path
+          required: true
+          description: L'ID de l'étudiant
+          schema:
+            type: string
+        - name: startDate
+          in: query
+          required: true
+          description: Date de début au format YYYY-MM-DD
+          schema:
+            type: string
+            format: date
+        - name: endDate
+          in: query
+          required: true
+          description: Date de fin au format YYYY-MM-DD
+          schema:
+            type: string
+            format: date
+      responses:
+        '200':
+          description: Nombre d'absences dans la période spécifiée
+          content:
+            application/json:
+              schema:
+                type: integer
+        '500':
+          description: Erreur interne du serveur
+
+components:
+  schemas:
+    AbsenceCountByCourse:
+      type: object
+      properties:
+        courseId:
+          type: integer
+          description: L'ID du cours
+        absenceCount:
+          type: integer
+          description: Le nombre d'absences pour ce cours
